--- a/templates/cassandra_yaml.erb
+++ b/templates/cassandra_yaml.erb
@@ -224,7 +224,7 @@ seed_provider:
       parameters:
           # seeds is actually a comma-delimited list of addresses.
           # Ex: "<ip1>,<ip2>,<ip3>"
-          - seeds: "<%= @seeds.join(',') %>"
+          - seeds: "<% if @seeds.is_a? Array -%><%= @seeds.join(',') %><% else -%><%= @seeds %><% end -%>"
 
 # emergency pressure valve: each time heap usage after a full (CMS)
 # garbage collection is above this fraction of the max, Cassandra will
