--- a/templates/cassandra_yaml.erb
+++ b/templates/cassandra_yaml.erb
@@ -349,7 +349,7 @@ start_rpc: true
 # 
 # Leaving this blank has the same effect it does for ListenAddress,
 # (i.e. it will be based on the configured hostname of the node).
-rpc_address: <%= @ipaddress %>
+rpc_address: 0.0.0.0
 # port for Thrift to listen for clients on
 rpc_port: 9160
 
