--- a/templates/cassandra_yaml.erb
+++ b/templates/cassandra_yaml.erb
@@ -647,6 +647,20 @@ index_interval: 128
 # the keystore and truststore.  For instructions on generating these files, see:
 # http://download.oracle.com/javase/6/docs/technotes/guides/security/jsse/JSSERefGuide.html#CreateKeystore
 #
+<% if @ssl %>
+server_encryption_options:
+    internode_encryption: all
+    keystore: <%= @keystore %>
+    keystore_password: cassandra
+    truststore: <%= @truststore %>
+    truststore_password: cassandra
+    # More advanced defaults below:
+    protocol: TLS
+    algorithm: SunX509
+    store_type: JKS
+    cipher_suites: [TLS_RSA_WITH_AES_128_CBC_SHA,TLS_RSA_WITH_AES_256_CBC_SHA]
+    require_client_auth: false
+<% else %>
 server_encryption_options:
     internode_encryption: none
     keystore: conf/.keystore
@@ -659,7 +673,7 @@ server_encryption_options:
     # store_type: JKS
     # cipher_suites: [TLS_RSA_WITH_AES_128_CBC_SHA,TLS_RSA_WITH_AES_256_CBC_SHA]
     # require_client_auth: false
-
+<% end %>
 # enable or disable client/server encryption.
 client_encryption_options:
     enabled: false
